added calendar and agenda for porait and landscape mode

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "frontend-calendar-app",
     "slug": "frontend-calendar-app",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -13,9 +13,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -23,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.njayman.frontendcalendarapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
